# scratch

./: README.md
com/: CMakeLists.txt
com/syc/am/: mysqlOverFunc.md  usefulSnippets.md
com/syc/am/cntr/: Bgew.java  Const.java  FundValImportImpl.java  MailReceiverStartup.java  README.md  addBashInContextMenu.reg  ajs.md  c05features.md  charArrAndcharPointer.md  charset.md  corstaticlib.md  cpp150Advise.md  createStaticLibrary.md  dlTable.md  dockerLog.md  gitUsage.md  mysqlDateTime.md  mysqlProcSample.md  notesOnConsArrInClang.md  one.js  outlink.md  printpage  recursively.md  rttiInCpp  showslowSql.md  sortUsage.md  varBeforeFor.jsp  varargsInClang.md  warDirConsInMavenProj.md
com/syc/cproj/: programOrientedBit.cpp  projectUsingDll.md
